bro still alignment issues fixing

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ position: relative;
 z-index: 1;            
 bottom: 140px; 
 
-  width: 100%;
-  right: 0;
+  width: 110%;
+  right: 70px;
 
 
 }
@@ -566,9 +566,9 @@ position: relative;
     }
     .collab-earth{
       position:absolute;
-      top:50%;
+      top:40%;
       left:50%;
-      width:661px;
+      width:665px;
       transform:translate(-50%,-50%);
       border-radius:50%;
     }
@@ -621,12 +621,12 @@ position: relative;
 
 
 
-    .logo-pos-1{top:17%;left:7%;}
-    .logo-pos-2{top:50%;left:-3%;}
-    .logo-pos-3{top:78%;left:7%;}
-    .logo-pos-4{top:17%;right:6%;}
-    .logo-pos-5{top:50%;right:-3%;}
-    .logo-pos-6{top:78%;right:6%;}
+    .logo-pos-1{top:3%;left:4%;}
+    .logo-pos-2{top:30%;left:-3%;}
+    .logo-pos-3{top:60%;left:4%;}
+    .logo-pos-4{top:3%;right:4%;}
+    .logo-pos-5{top:30%;right:-4%;}
+    .logo-pos-6{top:60%;right:4%;}
 
     @media (max-width:768px){
       .programs-title{font-size:1.6rem;}
@@ -703,10 +703,10 @@ position: relative;
 
 /* LEFT IMAGE */
 .placement-section .placement-img {
-  width: 131%;
+ width: 100%;
+  margin-left: 0;
   margin-top: 16px;
   border-radius: 18px;
-  margin-left: -40px; /* Move slightly left */
   display: block;
 }
 
